# Dekereke-ILText-Export

./: index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-windows.yml
docs/: index.html  sw.js
docs/assets/: index-BfA2WOmw.css  index-lPAetwC6.js
src/: App.css  App.tsx  backend.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
