[package]
name = "dekereke-il-text-export"
version = "0.1.0"
edition = "2021"

[lib]
name = "dekereke_il_text_export_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
